--- a/app/src/main/res/layout/interpolator_fragment.xml
+++ b/app/src/main/res/layout/interpolator_fragment.xml
@@ -54,10 +54,10 @@ limitations under the License.
             android:layout_height="wrap_content"
             android:layout_below="@+id/durationSeek"
             android:layout_centerHorizontal="true"
-            android:text="@string/take_photo" />
+            android:text="@string/show_photo" />
 
         <View
-            android:id="@+id/square"
+            android:id="@+id/purple_square"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_alignParentBottom="true"
@@ -65,7 +65,6 @@ limitations under the License.
             android:layout_centerHorizontal="true"
             android:layout_margin="10dp"
             android:background="@color/purple"
-            android:text="@string/photo_done"
             android:minHeight="100dp"
             android:minWidth="100dp" />
 
