--- a/app/src/main/res/layout/interpolator_fragment.xml
+++ b/app/src/main/res/layout/interpolator_fragment.xml
@@ -67,7 +67,13 @@ limitations under the License.
             android:background="@color/purple"
             android:minHeight="100dp"
             android:minWidth="100dp" />
+        <FrameLayout
+            android:id="@+id/taichi_preview"
+            android:layout_weight="2"
+            android:layout_width="match_parent"
+            android:layout_height="0px" />
 
     </RelativeLayout>
+
 
 </ScrollView>
